--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -135,6 +135,6 @@ set_target_properties(cxx
   )
 
 install(TARGETS cxx
-  LIBRARY DESTINATION lib${LIBCXX_LIBDIR_SUFFIX}
-  ARCHIVE DESTINATION lib${LIBCXX_LIBDIR_SUFFIX}
+  LIBRARY DESTINATION lib/${CHEERP_MODE}/${LIBCXX_LIBDIR_SUFFIX}
+  ARCHIVE DESTINATION lib/${CHEERP_MODE}/${LIBCXX_LIBDIR_SUFFIX}
   )
